[REPORT] Header: Title, Authors

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -11,9 +11,9 @@
 
 \usepackage[italian]{cleveref}
 
-\title{Meta-relazione per\\``Programmazione ad Oggetti''}
+\title{Relazione \\``Time2Survive''}
 
-\author{Danilo Pianini}
+\author{Andrea Cecchini \\ Nicolò D'Addabbo \\ Luca Oskari Fiumanò \\Leonardo David Matteo Magnani}
 \date{\today}
 
 
