[REPORT] Analysis introduction

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -25,11 +25,11 @@
 
 \chapter{Analisi}
 
-In questo capitolo andrà fatta l'analisi dei requisiti e quella del problema, ossia verranno elencate le cose che l'applicazione dovrà fare (requisiti) e verrà descritto il dominio applicativo (analisi del problema).
+
+Il progetto si pone l'obbiettivo di creare un videogioco ispirato a ``The Binding of Isaac'' \footnote{\url{https://store.steampowered.com/app/113200/The_Binding_of_Isaac/}}.
 %
-In fase di analisi, è molto importante tenere a mente che non vi deve essere alcun riferimento al design né tantomeno alle tecnologie implementative, ovvero, non si deve indicare come il software sarà internamente realizzato.
+La nostra versione consiste in un videogioco 2D con visuale dall'alto, il personaggio controllato dal giocatore potrà muoversi all'interno della stanza in ogni direzione del piano, nella stanza verranno generati nemici aventi difficoltà man mano crescente.
 %
-La fase di analisi, infatti, \textit{precede} qualunque azione di design o di implementazione.
 
 \section{Requisiti}
 
