--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -26,12 +26,26 @@
 \chapter{Analisi}
 
 \section{Requisiti}
+Il progetto si pone l’obiettivo di creare un videogioco survival shoot ‘em up ispirato a ``The Binding of Isaac'' \footnote{\url{https://store.steampowered.com/app/113200/The_Binding_of_Isaac/}}.
+Con survival shoot ‘em up si intende un genere di videogioco nella quale l’obiettivo è sopravvivere il più a lungo possibile a ondate di nemici, generandone di nuove una volta eliminata la precedente.
 
 \subsubsection{Requisiti funzionali}
 \begin{itemize}
-	\item 
-	\item 
-	\item 
+	\item Il gioco dovrà occuparsi di gestire la partita dell’utente all’interno della mappa di gioco di Time2Survive, rendendo più difficile la sopravvivenza del giocatore attraverso ondate di nemici di difficoltà crescente.
+    All’interno della mappa, il giocatore potrà:
+    \begin{itemize}
+        \item Sfruttare le proprie abilita’ di videogiocatore per sopravvivere alle numerose ondate dei nemici che si susseguiranno.
+        \item Sfidare ondate che verranno generate al completamento della precedente. Le ondate terminano quando tutti i nemici sono stati eliminati.
+        \item I nemici si potranno eliminare attraverso l'utilizzo di proiettili generati dal personaggio.
+        \item La partita sarà conclusa alla morte virtuale del giocatore.
+    \end{itemize}
+	\item Il giocatore si troverà all'interno di una stanza in cui verranno generate le ondate di nemici.
+	\item La difficoltà del gioco sarà incrementale e riguarderà sopratutto le ondate la quale difficoltà sarà manipolata attraverso 3 parametri:
+    \begin{itemize}
+        \item Numero: numero dei nemici a schermo.
+        \item Resilienza: resistenza agli attacchi da parte del giocatore.
+        \item Forza: danno provocato dal nemico.
+    \end{itemize}
 	\item 
 \end{itemize}
 
