[REPORT] Added some functional requirments: player movement, enemies, game status

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -46,7 +46,12 @@ Con survival shoot ‘em up si intende un genere di videogioco nella quale l’o
         \item Resilienza: resistenza agli attacchi da parte del giocatore.
         \item Forza: danno provocato dal nemico.
     \end{itemize}
-	\item 
+	\item Il giocatore si potrà muovere nell’ambiente di gioco costituito da una singola stanza.
+    \item I nemici sono delle entità attive del gioco che cercano di eliminare il giocatore.
+    Vengono controllati da una semplice AI (Artificial Intelligence). 
+	Per intelligenza artificiale si intende un software che conferisce a ogni nemico una strategia di movimento e di combattimento.
+    \item Il giocatore dovrà essere in grado di capire lo stato della partita in ogni momento della suddetta visualizzando la propria vita. 
+	Il giocatore sarà inoltre in grado di visualizzare le proprie capacità essendo in grado di visualizzare il numero di ondate alle quali è sopravvissuto.
 \end{itemize}
 
 \subsubsection{Requisiti non funzionali}
