[REPORT] Fixed report: changed difficulty item in 'Functional Requirements' section

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -40,7 +40,7 @@ Con survival shoot ‘em up si intende un genere di videogioco nella quale l’o
         \item La partita sarà conclusa alla morte virtuale del giocatore.
     \end{itemize}
 	\item Il giocatore si troverà all'interno di una stanza in cui verranno generate le ondate di nemici.
-	\item La difficoltà del gioco sarà incrementale e riguarderà sopratutto le ondate la quale difficoltà sarà manipolata attraverso 3 parametri:
+	\item La difficoltà del gioco sarà incrementale e riguarderà sopratutto le ondate. Essa sarà manipolata attraverso 3 parametri:
     \begin{itemize}
         \item Numero: numero dei nemici a schermo.
         \item Resilienza: resistenza agli attacchi da parte del giocatore.
