--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -30,6 +30,7 @@ Il progetto si pone l’obiettivo di creare un videogioco survival shoot ‘em u
 Con survival shoot ‘em up si intende un genere di videogioco nella quale l’obiettivo è sopravvivere il più a lungo possibile a ondate di nemici, generandone di nuove una volta eliminata la precedente.
 
 \subsubsection{Requisiti funzionali}
+\subsubsection{Requisiti Funzionali Obbligatori}
 \begin{itemize}
 	\item Il gioco dovrà occuparsi di gestire la partita dell’utente all’interno della mappa di gioco di Time2Survive, rendendo più difficile la sopravvivenza del giocatore attraverso ondate di nemici di difficoltà crescente.
     All’interno della mappa, il giocatore potrà:
@@ -54,6 +55,7 @@ Con survival shoot ‘em up si intende un genere di videogioco nella quale l’o
 	Il giocatore sarà inoltre in grado di visualizzare le proprie capacità essendo in grado di visualizzare il numero di ondate alle quali è sopravvissuto.
 \end{itemize}
 
+\subsubsection{Requisiti Funzionali Opzionali}
 \subsubsection{Requisiti non funzionali}
 \begin{itemize}
 	\item 
