[REPORT] Modified report: removed indexes from subSection 'Requisiti funzionali' & 'Requisiti non funzionali

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -29,7 +29,7 @@
 Il progetto si pone l’obiettivo di creare un videogioco survival shoot ‘em up ispirato a ``The Binding of Isaac'' \footnote{\url{https://store.steampowered.com/app/113200/The_Binding_of_Isaac/}}.
 Con survival shoot ‘em up si intende un genere di videogioco nella quale l’obiettivo è sopravvivere il più a lungo possibile a ondate di nemici, generandone di nuove una volta eliminata la precedente.
 
-\subsubsection{Requisiti funzionali}
+\subsection*{Requisiti funzionali}
 \subsubsection{Requisiti Funzionali Obbligatori}
 \begin{itemize}
 	\item Il gioco dovrà occuparsi di gestire la partita dell’utente all’interno della mappa di gioco di Time2Survive, rendendo più difficile la sopravvivenza del giocatore attraverso ondate di nemici di difficoltà crescente.
@@ -56,7 +56,7 @@ Con survival shoot ‘em up si intende un genere di videogioco nella quale l’o
 \end{itemize}
 
 \subsubsection{Requisiti Funzionali Opzionali}
-\subsubsection{Requisiti non funzionali}
+\subsection*{Requisiti non funzionali}
 \begin{itemize}
 	\item 
 \end{itemize}
