[REPORT] Added 'Requisiti funzionali opzionali'

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -56,6 +56,10 @@ Con survival shoot ‘em up si intende un genere di videogioco nella quale l’o
 \end{itemize}
 
 \subsubsection{Requisiti Funzionali Opzionali}
+\begin{itemize}
+	\item Per aiutare il giocatore, saranno disponibili diversi potenziamenti che gli permetteranno di aumentare le proprie abilità.
+	\item Per rendere più vario la partita saranno presenti diversi tipi di nemici con caratteristiche uniche e diverse tra loro.
+\end{itemize}
 \subsection*{Requisiti non funzionali}
 \begin{itemize}
 	\item 
