[REPORT] Added section: 'Analisi e modello del dominio'

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -64,71 +64,46 @@ Con survival shoot ‘em up si intende un genere di videogioco nella quale l’o
 \begin{itemize}
 	\item 
 \end{itemize}
-
+\newpage
 \section{Analisi e modello del dominio}
-
-In questa sezione si descrive il modello del \textit{dominio
-applicativo}, descrivendo le \textit{entità} in gioco ed i rapporti fra loro.
+Quando il giocatore inizia una partita di Time2Survive si ritroverà catapultato nel mondo di gioco.
+\\
+Una partita (\textbf{Game}) gestisce il proprio stato (\textbf{State}) e il mondo di gioco di T2S.
 %
-Si possono sollevare eventuali aspetti particolarmente impegnativi, descrivendo perché lo sono, senza inserire idee circa possibili soluzioni, ovvero sull'organizzazione interna del software.
+Il mondo (\textbf{World}) di T2S è l'arena dove i diversi personaggi (\textbf{Character}) si affrontano.
+\\
+Al giocatore sarà data la possibilità di controllare (\textbf{CharacterController}) un personaggio (\textbf{Player}).
+\\
+Durante la partita verranno generate ondate (\textbf{Wave}), ovvero un gruppo di nemici che il giocatore dovrà affrontare.
 %
-Infatti, la fase di analisi va effettuata \textbf{prima} del progetto: né il progetto né il software esistono nel momento in cui si effettua l'analisi.
+Un nemico (\textbf{Enemy}) è un personaggio comandato da un'intelligenza artificiale con il compito di attaccare e uccidere il player.
+\\
+Per combattere i nemici, il player avrà la possibilità di sparare dei proiettili (\textbf{Projectile}) che possono essere migliorati tramite potenziamenti (\textbf{Power up}).
+\\
+Una volta sconfitta un’ondata viene aggiornato lo stato della partita incrementando il numero di round alla quale si è sopravvissuti e viene generata una nuova ondata di maggiore difficoltà.
+\\
+All’inizio della partita al player verranno assegnati dei proiettili di default e un determinato numero di punti vita.
 %
-La discussione di aspetti propri del software (ossia, della \textit{soluzione} al problema e non del problema stesso) appartengono alla sfera della progettazione, e vanno discussi successivamente.
-
-È obbligatorio fornire uno schema UML del dominio, che diventerà anche lo scheletro della
-parte ``entity'' del modello dell'applicazione, ovvero degli elementi costitutivi del modello (in ottica MVC - Model View Controller): se l'analisi è ben fatta, dovreste ottenere una gerarchia di concetti che rappresentano le entità che compongono il problema da risolvere.
-%
-Un'analisi ben svolta \textbf{prima} di cimentarsi con lo sviluppo rappresenta un notevole aiuto per
-le fasi successive: è sufficiente descrivere a parole il dominio, quindi estrarre i sostantivi
-utilizzati, capire il loro ruolo all'interno del problema, le relazioni che intercorrono fra loro, e
-reificarli in interfacce.
-
-\subsection*{Elementi positivi}
+Una volta subito un danno, a seconda della sua entità, verrà detratta una certa quantità dalla vita corrente.
+\\
+La partita termina quando il giocatore ha perso tutti i suoi punti vita.
+\\
+Le difficoltà che il progetto si porta dietro sono:
 \begin{itemize}
-	\item Viene descritto accuratamente il modello del dominio.
-	\item Alcuni problemi, se non risolubili in assoluto o nel monte ore, vengono dichiarati come problemi che non saranno risolti o sarano risolti in futuro.
-	\item Si modella il dominio in forma di UML, descrivendolo appropriatamente.
+	\item Un’implementazione di un intelligenza artificiale in grado di controllare correttamente i nemici. La prima versione del gioco fornirà ai nemici un Controller basato sulle coordinate del player nella mappa. 
+	\item Una grafica completa che verrà implementata inizialmente in maniera minimale.
+
 \end{itemize}
-
-\subsection*{Elementi negativi}
-\begin{itemize}
-	\item Manca una descrizione a parole del modello del dominio.
-	\item Manca una descrizione UML delle entità del dominio e delle relazioni che intercorrono fra loro.
-	\item Vengono elencate soluzioni ai problemi, invece della descrizione degli stessi.
-	\item Vengono presentati elementi di design, o peggio aspetti implementativi.
-	\item Viene mostrato uno schema UML che include elementi implementativi o non utili alla descrizione del dominio, ma volti alla soluzione (non devono vedersi, ad esempio, campi o metodi privati, o cose che non siano equivalenti ad interfacce).
-\end{itemize}
-
-\subsection*{Esempio}
-GLaDOS dovrà essere in grado di accedere ad un'insieme di camere di test.
-%
-Tale insieme di camere prende il nome di percorso.
-%
-Ciascuna camera è composta di challenge successivi.
-%
-GLaDOS è responsabile di associare a ciascun challenge un insieme di consigli (suggestions) destinati all'utente (subject), dipendenti da possibili eventi.
-%
-GLaDOS dovrà poter comunicare coi locali cucina per approntare le torte.
-%
-Le torte potranno essere dolci, oppure semplici promesse di dolci che verranno disattese.
-
-Gli elementi costitutivi il problema sono sintetizzati in \Cref{img:analysis}.
-
-La difficoltà primaria sarà quella di riuscire a correlare lo stato corrente dell'utente e gli eventi in modo tale da generare i corretti suggerimenti.
-%
-Questo richiederà di mettere in campo appropriate strategie di intelligenza artificiale.
-
-Data la complessità di elaborare consigli via AI senza intervento umano, la prima versione del software fornita prevederà una serie di consigli forniti dall'utente.
-
-Il requisito non funzionale riguardante il consumo energetico richiederà studi specifici sulle performance di GLaDOS che non potranno essere effettuati all'interno del monte ore previsto: tale feature sarà oggetto di futuri lavori.
 
 \begin{figure}[H]
 \centering{}
-\includegraphics{img/analysis.pdf}
+\includegraphics[width=1\textwidth]{img/Schema-UML-Analisi.png}
 \caption{Schema UML dell'analisi del problema, con rappresentate le entità principali ed i rapporti fra loro}
 \label{img:analysis}
 \end{figure}
+
+
+
 
 \chapter{Design}
 
